syntax = "proto3";

// nolint: 'V1' and 'S3' doesn't look like CamelCase to the linter. Curious.

package chef.automate.api.config;
option go_package = "github.com/chef/automate/api/config/gateway";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-gateway"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;
			Service service = 3;
			Log log = 4;
			DataCollector data_collector = 5;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "http", default: 2000, protocol: "https" } ];
				google.protobuf.StringValue external_fqdn = 3;
				google.protobuf.Int32Value grpc_port = 4 [ (chef.automate.api.port) = { name: "service", default: 2001, protocol: "grpc" } ];
				google.protobuf.StringValue trial_license_url = 5;
				Log log = 6; // backwards compat with old log level config
				google.protobuf.StringValue auth_middleware = 7 [deprecated=true];
				reserved 9;
			}

			message Log {
				google.protobuf.StringValue level = 1;
				google.protobuf.StringValue format = 2;
			}

			message DataCollector {
				Limiter limiter = 1;
				message Limiter {
					google.protobuf.BoolValue disable = 1;
					google.protobuf.Int32Value max_inflight_requests = 2;
				}
			}
		}

		message Service {
		}
	}
}
